--- a/styles.css
+++ b/styles.css
@@ -184,3 +184,24 @@ input {
   display: inline-flex;
   margin-left: 40px;
 }
+
+/* box */
+
+button,
+label {
+  cursor: pointer;
+}
+
+input {
+  font: inherit;
+}
+.section {
+  padding-top: 40px;
+  padding-bottom: 40px;
+}
+
+.box {
+  width: 50px;
+  height: 50px;
+  background-color: red;
+}
